fixed margin for navbar when on mobile

--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ h1{
 .navbar{
     margin-right: 20px;
 }
+@media screen and (max-width:600px){
+    .navbar{
+        margin-right: 0px;
+    }
+}
 .navbar ul{
     background-color: hsl(280, 40%, 20%);
     border: 1px solid hsl(280, 20%, 30%);
